# mcp-youtube-transcript

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: python-app.yaml
src/mcp_youtube_transcript/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_mcp.py  test_server.py
